# AdMetric-Pro

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.hypothesis/constants/: 0fc50e6d68fc8e8a  15dc39380ba25f82  24ce196dd906be6b  8c9fc244446db506  9661a11957679137  b1a300a33f88eb9b  ea468f53b3fc1205  fb8ccd9345207b9e
.hypothesis/examples/04e6b3400353b141/: 15b4251b68276b47  17d6fef152990ffb
.hypothesis/examples/15b4251b68276b47/: 4215bda8ef5c357a
.hypothesis/examples/17d6fef152990ffb/: 75faa4113849b0fb
.kiro/hooks/: doc-test-generator.json  docstring-pytest-sync.kiro.hook  github-readiness-check.json  pre-push-guard.kiro.hook
.kiro/specs/admetric-pro/: design.md  requirements.md  tasks.md
.kiro/steering/: agency_standards.md  git_operations.md  github_pro.md  project_context.md
mock_data/: sample_meta_ads.csv
src/: __init__.py  csv_reader.py  excel_formatter.py  generate_visuals.py  main.py  metrics.py
tests/: __init__.py  test_csv_reader.py  test_csv_reader_properties.py  test_excel_formatter.py  test_excel_formatter_properties.py  test_generate_visuals.py  test_main.py  test_metrics.py  test_metrics_properties.py
