[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admetric-pro"
version = "1.0.0"
description = "Transform Meta Ads CSV exports into client-ready Excel reports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Herman Swanepoel", email = "swanepoelherman58@gmail.com"}
]
keywords = ["meta-ads", "facebook-ads", "excel", "reporting", "marketing", "automation", "zar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]
visuals = [
    "plotly>=5.0.0",
    "kaleido>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/Herman940306/AdMetric-Pro"
Repository = "https://github.com/Herman940306/AdMetric-Pro.git"
Issues = "https://github.com/Herman940306/AdMetric-Pro/issues"

[project.scripts]
admetric-pro = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
